fix styles ,update logic open and closed mobile menu

--- a/src/Components/Exercises/DynamicExercisesPageComponent/_dymamic_exercises_component.module.scss
+++ b/src/Components/Exercises/DynamicExercisesPageComponent/_dymamic_exercises_component.module.scss
@@ -1,1 +1,12 @@
+@import '../../../sass/utils/variables.module';
+@import '../../../sass/utils/mixins.module';
 
+.back_button_container {
+  position: absolute;
+  top: -135px;
+  left: 25px;
+
+  @include mediaQuery(768px) {
+    top: -120px;
+  }
+}
