--- a/src/Components/Exercises/ExercisesCreatePanel/_exercises_create_panel.module.scss
+++ b/src/Components/Exercises/ExercisesCreatePanel/_exercises_create_panel.module.scss
@@ -11,7 +11,7 @@
 .dynamic_page_title {
   font-weight: 700;
   @include fontSizeAuto(24px, 28px);
-  color: $white-color;
+  color: $light-orange-color;
 }
 
 .add_exercises_sub_list {
