--- a/src/app/exercises/body-parts/[id]/_body_parts_dynamic_page.module.scss
+++ b/src/app/exercises/body-parts/[id]/_body_parts_dynamic_page.module.scss
@@ -4,30 +4,18 @@
 .dynamic_page_section {
   width: 100vw;
   min-height: 100vh;
-  background-color: $black-color;
-  background-image: url('/auth-form-background-mobile.jpg');
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: contain;
+}
 
-  @include mediaQuery(768px) {
-    padding-top: 72px;
-    padding-bottom: 32px;
+.background_fon_page {
+  display: none;
 
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url('/auth-form-background-tablet.jpg');
-    }
-  }
-
-  @include mediaQuery(1440px) {
-    padding-bottom: 46px;
-
-    @media (min-device-pixel-ratio: 2),
-      (min-resolution: 192dpi),
-      (min-resolution: 2dppx) {
-      background-image: url('/auth-form-background-desctop.jpg');
-    }
+  @include mediaQuery(1200px) {
+    display: block;
+    position: absolute;
+    z-index: -10px;
+    right: -230px;
+    top: 115px;
+    width: 800px;
+    min-height: 100vh;
   }
 }
