--- a/src/Components/Exercises/ExercisesCreatePanel/_exercises_create_panel.module.scss
+++ b/src/Components/Exercises/ExercisesCreatePanel/_exercises_create_panel.module.scss
@@ -6,6 +6,7 @@
   gap: 10px;
   align-items: center;
   margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 .dynamic_page_title {
@@ -18,7 +19,8 @@
   @include fontSizeAuto(20px, 24px);
   display: flex;
   color: $white-color;
-  padding: 14px;
+  padding-top: 14px;
+  padding-bottom: 14px;
   position: relative;
   cursor: pointer;
 
