--- a/src/Components/Exercises/ExercisesSubList/_exercises_sub_list.module.scss
+++ b/src/Components/Exercises/ExercisesSubList/_exercises_sub_list.module.scss
@@ -1,7 +1,7 @@
 @import '../../../sass/utils/variables.module';
 @import '../../../sass/utils/mixins.module';
 
-.not_found_product {
+.not_found_sub_exercises_cards {
   max-width: 580px;
   @include fontSizeAuto(16px, 24px);
   color: $borde-color;
@@ -173,7 +173,7 @@
   cursor: pointer;
 }
 
-.deleted_product_loader {
+.deleted_sub_exercise_loader {
   position: absolute;
   bottom: 10px;
   right: 10px;
