--- a/src/Components/Modals/Modal/_modal.module.scss
+++ b/src/Components/Modals/Modal/_modal.module.scss
@@ -3,7 +3,7 @@
 
 .modal_backdrop {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(5px);
   position: fixed;
@@ -13,8 +13,8 @@
 }
 
 .modal {
-  width: 100%;
   max-width: 480px;
+  width: 100%;
   position: absolute;
   z-index: 110;
   top: 50%;
@@ -24,4 +24,8 @@
   -moz-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   -o-transform: translate(-50%, -50%);
+
+  @media (min-width: 768px) {
+    min-width: 694px;
+  }
 }
