update styles , created wel done exercises modal ,created redux stor for modal ,update hook useDynamicPath , update HOC GlobalRouterTracker,created parallel routs and interceptors routs for modal

--- a/src/Components/Modals/WellDoneDiaryModal/_well_done_diary_modal.module.scss
+++ b/src/Components/Modals/WellDoneDiaryModal/_well_done_diary_modal.module.scss
@@ -6,6 +6,8 @@
   padding: 48px 89px;
   max-width: 480px;
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
   background-color: $fon-modal;
   border: 1px solid $borde-color;
   border-radius: $border-radius-btn;
