--- a/src/Components/Modals/AddDiaryModal/_add_diary_modal.module.scss
+++ b/src/Components/Modals/AddDiaryModal/_add_diary_modal.module.scss
@@ -4,6 +4,8 @@
 .form_container {
   position: relative;
   max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
   padding: 48px 32px;
   background-color: $fon-modal;
