--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,37 @@
 @import '../sass/utils/mixins.module';
 @import 'react-calendar/dist/Calendar.css';
 
+.react-calendar {
+  background-color: #ef8964 !important;
+  max-width: 315px !important;
+  padding: 14px !important;
+  border-radius: 8px !important;
+  -webkit-border-radius: 8px !important;
+  -moz-border-radius: 8px !important;
+  -ms-border-radius: 8px !important;
+  -o-border-radius: 8px !important;
+}
+
+.react-calendar button {
+  color: $white-color !important;
+  @include fontSizeAuto(16px, 16px);
+  font-weight: 500 !important;
+  letter-spacing: -0.32px !important;
+}
+
+.react-calendar button:enabled:hover {
+  background-color: #303030 !important;
+}
+
+.react-calendar abbr[title] {
+  text-decoration: none !important;
+  color: rgba(239, 237, 232, 0.5) !important;
+  font-size: 14px !important;
+  font-weight: 500 !important;
+  letter-spacing: -0.28px !important;
+  text-transform: none !important;
+}
+
 .react-calendar__tile--active {
   background-color: $black-color !important;
   border-radius: 50% !important;
