--- a/src/Components/Modals/Modal/_modal.module.scss
+++ b/src/Components/Modals/Modal/_modal.module.scss
@@ -2,13 +2,16 @@
 @import '../../../sass/utils/mixins.module';
 
 .modal_backdrop {
-  width: 100%;
-  min-height: 100vh;
   background: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(5px);
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   z-index: 100;
 }
 
