"Update component sizes and add data-testid to video player; adjust timer tests and add dispatch mock; update authActions to include connectToDatabase calls; update Error and NotFound components" added test for videoPlayer

--- a/src/Components/UI/Loaders/LoaderApp/_loader_app.module.scss
+++ b/src/Components/UI/Loaders/LoaderApp/_loader_app.module.scss
@@ -17,6 +17,11 @@
   filter: invert(63%) sepia(99%) saturate(4584%) hue-rotate(346deg)
     brightness(97%) contrast(107%);
   animation: pulse 2s infinite;
+
+  @media (min-width: 768px) {
+    width: 250px;
+    height: 240px;
+  }
 }
 
 @keyframes pulse {
