"Update components with accessibility improvements and styling changes"
This commit includes updates to various components such as LoginForm, ExercisesDiaryList, ProductsDiaryList, ExercisesList, ProductFilter, and ProfileForm.Added tests for auth login and auth decor

--- a/src/Components/Product/ProductFilter/_product_filter.module.scss
+++ b/src/Components/Product/ProductFilter/_product_filter.module.scss
@@ -124,6 +124,14 @@
   gap: 16px;
 }
 
+.product_page_filter_group_label,
+.product_page_filter_group_label_recommendation {
+  position: absolute;
+  color: transparent;
+  top: 0;
+  left: 0;
+}
+
 .product_page_filter_categories_select,
 .product_page_filter_recommended_select {
   width: 100%;
