--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -93,6 +93,19 @@ button {
   cursor: pointer;
 }
 
+.hiddenTitle {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+
 .logo_container {
   position: absolute;
   z-index: 10;
